add RUN command to Dockerfile

--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -85,3 +85,5 @@ FROM alpine:3.5
 RUN --mount=type=secret, id=mysecret cat /run/secrets/mysecret 
 # show secrets from custom secret location
 RUN --mount=type=secret, id=mysecret,dst=/foobar cat /foobar 
+# show secrets from orgranbar secret location
+RUN --mount=type=secret, id=mysecret,dst=/foobar cat /organebar 
